fix: issue with instruction error overlapping with value inside

--- a/packages/p2p/src/components/my-profile/payment-methods/add-payment-method/add-payment-method.scss
+++ b/packages/p2p/src/components/my-profile/payment-methods/add-payment-method/add-payment-method.scss
@@ -89,6 +89,9 @@
                         padding-right: 0;
                     }
                 }
+                & .dc-field--error {
+                    margin-top: 5.6rem;
+                }
             }
         }
     }
